--- a/TDS_lab/rpcgen/addtion/Makefile.main
+++ b/TDS_lab/rpcgen/addtion/Makefile.main
@@ -20,9 +20,11 @@ OBJECTS_CLNT = $(SOURCES_CLNT.c:%.c=%.o) $(TARGETS_CLNT.c:%.c=%.o)
 OBJECTS_SVC = $(SOURCES_SVC.c:%.c=%.o) $(TARGETS_SVC.c:%.c=%.o)
 # Compiler flags 
 
-CFLAGS += -g 
-LDLIBS += -lnsl
+
+CFLAGS += -g -Wall -I/usr/include/tirpc
+LDLIBS += -lnsl -ltirpc
 RPCGENFLAGS = 
+LDFLAGS = -ltirpc
 
 # Targets 
 
