--- a/TDS_lab/eval_1/Makefile.main
+++ b/TDS_lab/eval_1/Makefile.main
@@ -12,17 +12,18 @@ SOURCES_SVC.c =
 SOURCES_SVC.h = 
 SOURCES.x = main.x
 
-TARGETS_SVC.c = main_svc.c main_server.c main_xdr.c 
-TARGETS_CLNT.c = main_clnt.c main_client.c main_xdr.c 
-TARGETS = main.h main_xdr.c main_clnt.c main_svc.c main_client.c main_server.c
+TARGETS_SVC.c = main_svc.c main_server.c   
+TARGETS_CLNT.c = main_clnt.c main_client.c   
+TARGETS = main.h   main_clnt.c main_svc.c main_client.c main_server.c
 
 OBJECTS_CLNT = $(SOURCES_CLNT.c:%.c=%.o) $(TARGETS_CLNT.c:%.c=%.o)
 OBJECTS_SVC = $(SOURCES_SVC.c:%.c=%.o) $(TARGETS_SVC.c:%.c=%.o)
 # Compiler flags 
 
-CFLAGS += -g 
-LDLIBS += -lnsl
+CFLAGS += -g -Wall -I/usr/include/tirpc
+LDLIBS += -lnsl -ltirpc
 RPCGENFLAGS = 
+LDFLAGS = -ltirpc
 
 # Targets 
 
@@ -42,5 +43,4 @@ $(SERVER) : $(OBJECTS_SVC)
 	$(LINK.c) -o $(SERVER) $(OBJECTS_SVC) $(LDLIBS)
 
  clean:
-	 $(RM) core $(TARGETS) $(OBJECTS_CLNT) $(OBJECTS_SVC) $(CLIENT) $(SERVER)
-
+	 $(RM) core $(OBJECTS_CLNT) $(OBJECTS_SVC) $(CLIENT) $(SERVER)
